Thread Get use poll for http client